@@ -28,6 +28,7 @@ INCOMPATIBLE CHANGES SINCE 2.4.x
   new colours
 - wxWindow::Clear() is now called ClearBackground()
 - pointer returned by wxFont::GetNativeFontInfo() must not be deleted now
+- wxMouseEvent::Moving() doesn't return true if mouse is being dragged
 
 
 DEPRECATED METHODS SINCE 2.4.x
